update to resume

--- a/main.tex
+++ b/main.tex
@@ -33,11 +33,11 @@
         \multicolumn{1}{p{8cm}}{
         \textit{Programming:} C++, Python, JAVA \LaTeX, Matlab \newline
         \textit{Applied Maths:} Mathematical Modeling, Numerical Analysis, Optimization \newline
-        \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft}  &
+        \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
                 \multicolumn{1}{p{6cm}}{Math 142: Mathematical Modeling \newline
                 Math 164: Optimization \newline
-                EPS SCI 136A/B: Applied Geophysics
+                EPS SCI 136: Applied Geophysics
                 Physics 105: Mechanics \newline
                 Physics 110: Electricity and Magnetism \newline
                 CS 31: Computer Science I \newline
