small updates in classes clubs

--- a/main.tex
+++ b/main.tex
@@ -24,8 +24,8 @@
 \begin{tabular}{l l l l} \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
         \multicolumn{3}{p{17cm}}{
-        \textbf{University of California: Los Angeles} \newline
-        \textit{Degrees:} B.S. Mathematics of Computation, Geophysics and Planetary Physics Minor \newline
+        \textbf{University of California: Los Angeles, 2019} \newline
+        \textit{Degrees:} B.S. Mathematics of Computation \newline
         Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \textbf{College of the Canyons} \newline
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline
