updated LA Hacks into resume, and GPAs

--- a/main.tex
+++ b/main.tex
@@ -24,15 +24,15 @@
 \begin{tabular}{l l l l} \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
         \multicolumn{3}{p{17cm}}{
-        \textbf{University of California: Los Angeles, 2019} \newline
+        \leftright{\textbf{University of California: Los Angeles, 2019}}{GPA: 3.03}\newline
         \textit{Degrees:} B.S. Mathematics of Computation \newline
         Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
-        \textbf{College of the Canyons} \newline
+        \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
-        \textit{Programming:} C++, Python, JAVA \LaTeX, Matlab \newline
-        \textit{Applied Maths:} Mathematical Modeling, Numerical Analysis, Optimization \newline
+        \textit{Programming:} C++, Python, JAVA \LaTeX, Matlab, JavaScript, HTML, CSS \newline
+        \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
                 \multicolumn{1}{p{6cm}}{Math 142: Mathematical Modeling \newline
@@ -44,6 +44,14 @@
                 CS 32: Computer Science II} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Research \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
+        \textbf{LA Hacks 2018} \newline
+        \leftright{\textit{Title:} Full Stack Developer}{March 2018} \newline
+        \textit{Project:} Team developed an arduino compass hooked up to a skateboard that would connect to a given destination from a website
+        \begin{itemize}[noitemsep,nolistsep]
+            \item Designed back end of the website using JavaScript, so that the arduino had GPS coordinates given to it
+            \item Designed simple front end for the website using HTML, so that user could input destination
+            \item Assisted team members with design of arduino, so that it would gather data, and output an accurate heading correctly
+        \end{itemize}
         \textbf{DataFest 2017} \newline
         \leftright{\textit{Title:} Data Analysis}{May 2017}  \newline
         \textit{Project:} Team developed a machine learning algorithm to determine purchase pattern of algorithms
@@ -63,14 +71,7 @@
         \textit{Project:} Team developed a device to place on the HASP to collect particles from celestial showers.
         \begin{itemize}[noitemsep,nolistsep]
             \item Modelled systems and possible scenarios the ECDC will go through during flight, so that the team would know design requirements
-        \end{itemize}
-        \textbf{College of the Canyons Fair: Sonoluminescence} \newline
-        \leftright{\textit{Title:} Researcher and Analyst}{Fall 2013 - Spring 2014} \newline
-        \textit{Project:} Team constructed an apparatus to display the sonoluminescence phenomena.
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Researched sonoluminescence
-            \item Constructed the apparatus by soldering a circuit together
-        \end{itemize}\baselineskip}  \\ \hline
+        \end{itemize} \baselineskip}  \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Work \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
         \leftright{\textbf{College of the Canyons}}{September 2014 - June 2016} \newline
@@ -84,13 +85,6 @@
         \begin{itemize}[noitemsep,nolistsep]
             \item Patient care such as vitals, assessments, medical interventions
             \item Giving and taking medical history reports
-        \end{itemize}
-        \leftright{\textbf{Papa John's Pizza}}{May 2013 - April 2014} \newline
-        \textit{Title:} Assistant Manager
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Took orders and ran register in the store
-            \item Surveyed systems at other businesses
-            \item Closing the restaurant and stock counting
         \end{itemize}
         \leftright{\textbf{High Pressure Technologies LLC}}{May 2011 - July 2011} \newline
         \textit{Title:} Machine Shop Intern
