updated resume for fall interviewing cycle

--- a/main.tex
+++ b/main.tex
@@ -14,21 +14,19 @@
 
 \begin{document}
 
-\setlist{nosep}
-
 {\centering
-    \textbf{\large David A. James} \\
-    \leftright{(661) 666-2009}{\href{https://github.com/DJ-2805}{github.com/DJ-2805}}  \\
-    \leftright{\href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu}}{\href{https://www.linkedin.com/in/dj-2805/}{linkedin.com/in/dj-2805/}}  \\
+    \textbf{\large David A. James}\\
+    \leftright{(661) 666-2009} {\href{https://github.com/DJ-2805}{github.com/DJ-2805}}\\
+    \leftright{\href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu}}{\href{https://www.linkedin.com/in/daj-2805/}{linkedin.com/in/daj-2805/}}\\
 }
-\begin{tabular}{l l l l} \hline
+\begin{tabular}{l l l l} \hline 
     \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
         \multicolumn{3}{p{17cm}}{
         \leftright{\textbf{University of California: Los Angeles, 2019}}{GPA: 3.03}\newline
         \textit{Degrees:} B.S. Mathematics of Computation \newline
         Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
-        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline
+        \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
         \textit{Programming:} C++, Python, JAVA \LaTeX, Matlab, JavaScript, HTML, CSS \newline
@@ -42,8 +40,16 @@
                 Physics 110: Electricity and Magnetism \newline
                 CS 31: Computer Science I \newline
                 CS 32: Computer Science II} \\ \hline
-    \multicolumn{1}{p{1.7cm}}{\textbf{Research \newline Experience}} &
+    \multicolumn{1}{p{1.7cm}}{\textbf{Project \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
+        \textbf{Rapid: Blue Dawn CubeSat Mission} \newline
+        \leftright{\textit{Title:} Assembly, Integration, \& Testing Engineer}{June 2018 - Present} \newline
+        \textit{Project:} Team is working on developing a CubeSat that will be launching on Blue Origin's New Shepard rocket
+        \begin{itemize}[noitemsep,nolistsep]
+            \item Write and review 'safe-to-mate' procedures
+            \item Assemble and check the integrity of the components
+            \item Test any problems that arise on the design, and troubleshoot for solutions
+        \end{itemize}
         \textbf{LA Hacks 2018} \newline
         \leftright{\textit{Title:} Full Stack Developer}{March 2018} \newline
         \textit{Project:} Team developed an arduino compass hooked up to a skateboard that would connect to a given destination from a website
@@ -52,39 +58,26 @@
             \item Designed simple front end for the website using HTML, so that user could input destination
             \item Assisted team members with design of arduino, so that it would gather data, and output an accurate heading correctly
         \end{itemize}
-        \textbf{DataFest 2017} \newline
-        \leftright{\textit{Title:} Data Analysis}{May 2017}  \newline
-        \textit{Project:} Team developed a machine learning algorithm to determine purchase pattern of algorithms
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Extracted data, so that team can work with smaller sets
-            \item Analyzed data via matrices to confirm machine algorithm was accurate
-            \item Created presentation to present results to audience and judges
-        \end{itemize}
         \textbf{NASA High Altitude Student Platform: Electrostatic Cosmic Dust Collector [ECDC]} \newline
-        \leftright{\textit{Title:} Systems Engineer}{Fall 2016 - Fall 2017}\newline
-        \textit{Project:} Team developed an optimized device to place on the HASP to collect particles from celestial showers.
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Researched corona discharge to optimize the electrostatic dust collection
-        \end{itemize}
-        \textbf{NASA High Altitude Student Platform: Electrostatic Cosmic Dust Collector [ECDC]} \newline
-        \leftright{\textit{Title:} Systems Engineer}{Fall 2015 - Fall 2016} \newline
+        \leftright{\textit{Title:} Systems Engineer}{Fall 2015 - Fall 2017} \newline
         \textit{Project:} Team developed a device to place on the HASP to collect particles from celestial showers.
         \begin{itemize}[noitemsep,nolistsep]
             \item Modelled systems and possible scenarios the ECDC will go through during flight, so that the team would know design requirements
+            \item Researched corona discharge to optimize the electrostatic dust collection
         \end{itemize} \baselineskip}  \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Work \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
+        \leftright{\textbf{Institute of Transportation}}{June 2018 - Present} \newline
+        \textit{Title:} IT Assistant
+        \begin{itemize}[noitemsep,nolistsep]
+            \item assisted in building computers for the ITS department along with setting up connections and machines for the Lewis Center
+            \item Help maintain the web servers under and fix any bugs that may arise
+        \end{itemize}
         \leftright{\textbf{College of the Canyons}}{September 2014 - June 2016} \newline
         \textit{Title:} MESA Tutor/ Workshop Facilitator/ Math and Science Tutor
         \begin{itemize}[noitemsep,nolistsep]
             \item Assisted students in mathematical or scientific homework or questions
             \item Lead Academic Excellence Workshops in the MESA Center
-        \end{itemize}
-        \leftright{\textbf{Gentle Ride Ambulance}}{May 2014 - Decemeber 2014} \newline
-        \textit{Title:} EMT-B
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Patient care such as vitals, assessments, medical interventions
-            \item Giving and taking medical history reports
         \end{itemize}
         \leftright{\textbf{High Pressure Technologies LLC}}{May 2011 - July 2011} \newline
         \textit{Title:} Machine Shop Intern
@@ -97,24 +90,20 @@
         \multicolumn{1}{p{8.5cm}}{
         \textbf{UCLA CalGeo} \newline
         \leftright{\textit{Community Service Chair}}{Fall 2017-Spring 2018}
-        \begin{itemize}
+        \begin{itemize}[noitemsep,nolistsep]
             \item Planned community service events
             \item Planned public outreach events
         \end{itemize}
         \textbf{Astronomy and Physics Club} \newline
         \leftright{\textit{President}}{Fall 2015-Spring 2018}
-        \begin{itemize}
+        \begin{itemize}[noitemsep,nolistsep]
             \item Started and manged club events
             \item Wrote budget proposals
         \end{itemize}}  &
             \multicolumn{1}{p{1cm}}{\textbf{Clubs/ \newline Interests}}   &
                 \multicolumn{1}{p{6cm}}{
                 California Geotechnical Engineering Association [CalGeo] \newline
-                BruinSpace \newline
-                Society of Physics Students [SPS] \newline
-                American Physical Society [APS] \newline
-                American Chemical Society [ACS] \newline
-                Mathematics, Engineering, Science Achievment [MESA] \newline
+                Muay Thai \newline
                 Salsa Club
                 }
 \end{tabular}
