updated work experience timeline and added minor

--- a/main.tex
+++ b/main.tex
@@ -23,8 +23,8 @@
     \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
         \multicolumn{3}{p{17cm}}{
         \leftright{\textbf{University of California: Los Angeles, 2019}}{GPA: 3.03}\newline
-        \textit{Degrees:} B.S. Mathematics of Computation \newline
-        Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
+        \textit{Degrees:} B.S. Mathematics of Computation with a Minor in Geophysics and Planetary Physics \newline
+        \textit{Organizations:} Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
@@ -73,7 +73,7 @@
             \item assisted in building computers for the ITS department along with setting up connections and machines for the Lewis Center
             \item Help maintain the web servers under and fix any bugs that may arise
         \end{itemize}
-        \leftright{\textbf{College of the Canyons}}{September 2014 - June 2016} \newline
+        \leftright{\textbf{College of the Canyons}}{September 2014 - Present} \newline
         \textit{Title:} MESA Tutor/ Workshop Facilitator/ Math and Science Tutor
         \begin{itemize}[noitemsep,nolistsep]
             \item Assisted students in mathematical or scientific homework or questions
