--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \begin{tabular}{l l l l} \hline 
     \multicolumn{1}{p{1.7cm}}{\textbf{Education}}    &                
         \multicolumn{3}{p{17cm}}{
-        \leftright{\textbf{University of California: Los Angeles, 2019}}{GPA: 3.03}\newline
+        \leftright{\textbf{University of California: Los Angeles, 2019}}\newline
         \textit{Degrees:} B.S. Mathematics of Computation with a Minor in Geophysics and Planetary Physics \newline
         \textit{Organizations:} Hermanos Unidos; Triangle Fraternity for Engineers, Architects, and Scientists \newline
         \leftright{\textbf{College of the Canyons}}{GPA 3.55} \newline
