Updated Project Exp, Idea Hacks 2019

--- a/main.tex
+++ b/main.tex
@@ -50,20 +50,21 @@
             \item Assemble and check the integrity of the components
             \item Test any problems that arise on the design, and troubleshoot for solutions
         \end{itemize}
-        \textbf{LA Hacks 2018} \newline
+        \textbf{Idea Hacks 2019 -- \href{https://github.com/DJ-2805/muscleBot}{https://github.com/DJ-2805/muscleBot}} \newline
+        \leftright{\textit{Title:} Data Analyst}{January 2019} \newline
+        \textit{Project:} Team designed RC Car that moved based off of hand motion and muscle detection
+        \begin{itemize}[noitemsep,nolistsep]
+            \item Calibrated muscle sensor to recognize EM pulses to turn on/off RC Car
+            \item Calibrated hand motion, so that accleration data would move the car in correct motion
+            \item Assisted in circuit design of RC Car and hookup of hardware to devices
+        \end{itemize}
+        \textbf{LA Hacks 2018 -- \href{https://github.com/ryanmjacobs/4sk8}{https://github.com/ryanmjacobs/4sk8}} \newline
         \leftright{\textit{Title:} Full Stack Developer}{March 2018} \newline
         \textit{Project:} Team developed an arduino compass hooked up to a skateboard that would connect to a given destination from a website
         \begin{itemize}[noitemsep,nolistsep]
             \item Designed back end of the website using JavaScript, so that the arduino had GPS coordinates given to it
             \item Designed simple front end for the website using HTML, so that user could input destination
             \item Assisted team members with design of arduino, so that it would gather data, and output an accurate heading correctly
-        \end{itemize}
-        \textbf{NASA High Altitude Student Platform: Electrostatic Cosmic Dust Collector [ECDC]} \newline
-        \leftright{\textit{Title:} Systems Engineer}{Fall 2015 - Fall 2017} \newline
-        \textit{Project:} Team developed a device to place on the HASP to collect particles from celestial showers.
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Modelled systems and possible scenarios the ECDC will go through during flight, so that the team would know design requirements
-            \item Researched corona discharge to optimize the electrostatic dust collection
         \end{itemize} \baselineskip}  \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Work \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
