added hyperlinks to rapid project, updated resume pdf

--- a/main.tex
+++ b/main.tex
@@ -29,8 +29,8 @@
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
-        \textit{Programming:} C++, Python, JAVA \LaTeX, Matlab, JavaScript, HTML, CSS \newline
-        \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization \newline
+        \textit{Programming:} C++, Python, \LaTeX, Matlab, JavaScript \newline
+        \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
                 \multicolumn{1}{p{6cm}}{Math 142: Mathematical Modeling \newline
@@ -42,7 +42,7 @@
                 CS 32: Computer Science II} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Project \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
-        \textbf{Rapid: Blue Dawn CubeSat Mission} \newline
+        \textbf{Rapid: Blue Dawn CubeSat Mission -- \href{http://bruinspace.com/projects/rapid.html}{http://bruinspace.com/projects/rapid.html}} \newline
         \leftright{\textit{Title:} Assembly, Integration, \& Testing Engineer}{June 2018 - Present} \newline
         \textit{Project:} Team is working on developing a CubeSat that will be launching on Blue Origin's New Shepard rocket
         \begin{itemize}[noitemsep,nolistsep]
