Updated experience descriptions; Fixed margins on resume

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 
 \usepackage{array}
-\usepackage[margin=.5cm]{geometry}
+\usepackage[margin=.15cm]{geometry}
 \usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -46,9 +46,9 @@
         \leftright{\textit{Title:} Assembly, Integration, \& Testing Engineer}{June 2018 - Present} \newline
         \textit{Project:} Team is working on developing a CubeSat that will be launching on Blue Origin's New Shepard rocket
         \begin{itemize}[noitemsep,nolistsep]
-            \item Write and review 'safe-to-mate' procedures
-            \item Assemble and check the integrity of the components
-            \item Test any problems that arise on the design, and troubleshoot for solutions
+            \item Write assembly, safe-to-mate, and functional procedures
+            \item Test procedures for errors and accuracy on design
+            \item Test magneto-hydrodynamic pump extensively to ensure design was safe to fly 
         \end{itemize}
         \textbf{Idea Hacks 2019 -- \href{https://github.com/DJ-2805/muscleBot}{https://github.com/DJ-2805/muscleBot}} \newline
         \leftright{\textit{Title:} Data Analyst}{January 2019} \newline
@@ -60,32 +60,35 @@
         \end{itemize}
         \textbf{LA Hacks 2018 -- \href{https://github.com/ryanmjacobs/4sk8}{https://github.com/ryanmjacobs/4sk8}} \newline
         \leftright{\textit{Title:} Full Stack Developer}{March 2018} \newline
-        \textit{Project:} Team developed an arduino compass hooked up to a skateboard that would connect to a given destination from a website
+        \textit{Project:} Team developed an Arduino compass hooked up to a skateboard that would receive heading from external website
         \begin{itemize}[noitemsep,nolistsep]
-            \item Designed back end of the website using JavaScript, so that the arduino had GPS coordinates given to it
-            \item Designed simple front end for the website using HTML, so that user could input destination
-            \item Assisted team members with design of arduino, so that it would gather data, and output an accurate heading correctly
+            \item Designed back end of the website using JavaScript, so that Arduino received GPS coordinates
+            \item Designed simple front-end for the website using HTML, so that user could input destination
+            \item Assisted team members with design, so that it would gather data, and output an accurate heading
         \end{itemize} \baselineskip}  \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Work \newline Experience}} &
         \multicolumn{3}{p{16cm}}{
-        \leftright{\textbf{Institute of Transportation}}{June 2018 - Present} \newline
+        \leftright{\textbf{UCLA: Institute of Transportation Studies}}{June 2018 - Present} \newline
         \textit{Title:} IT Assistant
         \begin{itemize}[noitemsep,nolistsep]
-            \item assisted in building computers for the ITS department along with setting up connections and machines for the Lewis Center
-            \item Help maintain the web servers under and fix any bugs that may arise
+            \item Built computers for the ITS Department
+            \item Setup network and connections along with cleaning machines for Lewis Department
+            \item Help maintain web servers
+            \item Troubleshoot any technical problems or tasks that arise within the department
         \end{itemize}
-        \leftright{\textbf{College of the Canyons}}{September 2014 - Present} \newline
+        \leftright{\textbf{College of the Canyons: MESA Center}}{September 2014 - Present} \newline
         \textit{Title:} MESA Tutor/ Workshop Facilitator/ Math and Science Tutor
         \begin{itemize}[noitemsep,nolistsep]
-            \item Assisted students in mathematical or scientific homework or questions
+            \item Assisted students in STEM homework and answered extra questions pertaining to theory they studied
             \item Lead Academic Excellence Workshops in the MESA Center
+            \item Physics Academic Workshop showed a GPA increase of 0.2 with my students and an average of 1 letter grade up over students not in workshop
         \end{itemize}
         \leftright{\textbf{High Pressure Technologies LLC}}{May 2011 - July 2011} \newline
         \textit{Title:} Machine Shop Intern
         \begin{itemize}[noitemsep,nolistsep]
             \item Assisted machinist with pressure system repair
-            \item Surveyed systems at other businesses
-            \item Learned machining and workshop environment
+            \item Tested pressure systems at external locations to ensure safety and upkeep
+            \item Machined fittings for pressure systems
         \end{itemize}\baselineskip} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Leadership \newline Experience}}  &
         \multicolumn{1}{p{8.5cm}}{
