fixed lining issues on experience point

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
-        \textit{Programming:} C++, Python, \LaTeX, Matlab, JavaScript \newline
+        \textit{Programming:} C/C++, Python, \LaTeX, Matlab, JavaScript \newline
         \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
@@ -79,9 +79,9 @@
         \leftright{\textbf{College of the Canyons: MESA Center}}{September 2014 - Present} \newline
         \textit{Title:} MESA Tutor/ Workshop Facilitator/ Math and Science Tutor
         \begin{itemize}[noitemsep,nolistsep]
-            \item Assisted students in STEM homework and answered extra questions pertaining to theory they studied
+            \item Assisted students in STEM homework and answered questions pertaining to theory they studied
             \item Lead Academic Excellence Workshops in the MESA Center
-            \item Physics Academic Workshop showed a GPA increase of 0.2 with my students and an average of 1 letter grade up over students not in workshop
+            \item Physics Academic Workshop showed a GPA increase of 0.2 with my students and an average of 1 letter grade increase over other students
         \end{itemize}
         \leftright{\textbf{High Pressure Technologies LLC}}{May 2011 - July 2011} \newline
         \textit{Title:} Machine Shop Intern
