added blockchain experience

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
         \textit{Degrees:} Associates in Mathematics, Assosciates in Physics} \\ \hline \newline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
         \multicolumn{1}{p{8cm}}{
-        \textit{Programming:} C/C++, Python, \LaTeX, Matlab, JavaScript \newline
+        \textit{Programming:} C/C++, Python, \LaTeX, Matlab, JavaScript, Solidity \newline
         \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Soldering, Milling, Machining, Lab experience, Microsoft Office}  &
             \multicolumn{1}{p{2.3cm}}{\textbf{Relevant Coursework}} &
@@ -38,6 +38,7 @@
                 EPS SCI 136: Applied Geophysics
                 Physics 105: Mechanics \newline
                 Physics 110: Electricity and Magnetism \newline
+                ECE 188: Blockchain Technology \newline
                 CS 31: Computer Science I \newline
                 CS 32: Computer Science II} \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Project \newline Experience}} &
